prevent file list overflow

--- a/frontend/src/components/File.css
+++ b/frontend/src/components/File.css
@@ -10,3 +10,7 @@
     border: 1px solid black;
     cursor: pointer;
 }
+
+.file img {
+    width: 100%;
+}
