--- a/frontend/src/components/FileList.css
+++ b/frontend/src/components/FileList.css
@@ -7,13 +7,17 @@
 
 .file-list ul {
     display: flex;
-    gap: 0.75em;
-    width: 10%;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    font-size: 2.2rem;
+    gap: 1em;
     min-height: 10%;
     padding: 0;
     margin: 0;
 }
 
 .file-list li {
+    width: 6.9em;
     list-style-type: none;
 }
